# K-R-language-c

./: .gitignore  2.1.c  CMakeLists.txt  a.out  build.sh  comment_remover.c  count_symbols.c  detab.c  dynamic_read_longest_line.c  entab.c  file1.txt  file2.txt  input.c  line_splitter.c  print_each_long_line.c  reverse_input.c  skip_spaces.c  stringutils.c  stringutils.h  symbol_counter.c  symbol_gisto.c  tabs_to_backspace.c  tail  tail_remover.c  temperature_converter.c  temperature_converter_for.c  wc.c  word_length_gisto.c  word_print.c
exercises/: 2.1.c  2.2.c  2.3.c  2.4.c  2.7.c  2.8.c  2.9.c  3.1.c  3.5.c  3.6.c  4.1.c  4.2.c  a.out
lib/: array_utils.c  array_utils.h  asserts.c  asserts.h  char_utils.c  char_utils.h  iolib.c  iolib.h  stack.c  stack.h  string.c  string.h  string_builder.c  string_builder.h  stringutils.c  stringutils.h
lib/test/: stack.test.c
projects/1.24/: compile.sh  compiler_tools.h  main.c
scripts/: test_array_list.sh  test_buffered_reader.sh  test_hash_map.sh  test_linked_list.sh  test_qsort.sh  test_stack.sh
sctipts/: test_stack.sh
src/compiler/: tokenizer.c  tokenizer.h
src/exercises/: 2.10.c  2.2.c  2.3.c  2.5.c  2.6.c  2.7.c  3.1.c  3.2.c  3.3.c  3.4.c  4.14.c  4.3.c  5.1.c  5.10.c  5.11_entab.c  5.13.c  5.14.c  5.18.c  5.2.c  5.3.c  5.4.c  5.5.c  5.7.c  5.8.c  6.2.c  6.3.c  6.4.c  7.1.c  7.2.c  7.3.c  7.4.c  7.6.c  7.8.c
src/lib/: array_list.c  array_list.h  asserts.c  buffered_reader.c  iolib.c  (+24 more)
test/: array_list.test.c  buffered_reader.test.c  hash_map.test.c  linked_list.test.c  qsort.test.c  stack.test.c  tree.test.c
(+61 files in other folders)
